<resources>
    <string name="app_name">AppFinance</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_palmares">Hausses</string>
    <string name="afficher_palmares">Palmarés</string>
    <string name="titre_valeur">valeur</string>
    <string name="titre_variation">variation</string>
    <string name="title_activity_baisses">Baisses</string>
    <string name="display_baisses">Baisses</string>
    <string name="display_hausses">Hausses</string>
    <string name="acceuil">Acceuil</string>
    <string name="title_activity_devise">Convertisseur de devise</string>
    <string name="afficher_convertisseur">convertisseur de devise</string>
    <string name="button_convert">Convertir</string>
    <string name="afficher_cours_devise">cours d\'echange des devises</string>


    <string name="code">désignation : </string>
    <string name="unite">unité : </string>
    <string name="achat">achat : </string>
    <string name="vente">vente : </string>


    <string name="devise_defaut1">Dinar Tunisien</string>
    <string-array name="devises">
        <item>Dinar Tunisien</item>
        <item>Euro</item>
        <item>Dollar US</item>
        <item>Livre Sterling</item>
    </string-array>
    <string name="title_activity_cours">cours d\'echange des devises</string>




    <string name="title_activity_main2">Acceuil</string>
    <string name="volumeTitre">volume(titre)</string>
    <string name="volume">volume(-)</string>
    <string name="ouverture">Ouverture</string>
    <string name="plus_haut">Plus Haut</string>
    <string name="plus_bas">Plus bas</string>
    <string name="cloture">Clôture veille</string>
    <string name="volatilite">volatilité</string>
    <string name="capital_echange">capital echangé</string>
    <string name="valorisation">valorisation</string>
    <string name="actu">Actualités</string>


</resources>
