<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/acceuil"
        android:orderInCategory="100"
        android:title="@string/acceuil"
        app:showAsAction="never" />

    <item
        android:id="@+id/display_convertisseur"
        android:orderInCategory="100"
        android:title="@string/afficher_convertisseur"
        app:showAsAction="never" />

    <item
        android:id="@+id/display_cours_devise"
        android:orderInCategory="100"
        android:title="@string/afficher_cours_devise"
        app:showAsAction="never" />



    <item
        android:id="@+id/baisses"
        android:orderInCategory="100"
        android:title="@string/display_baisses"
        app:showAsAction="ifRoom" />
</menu>