<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.exemple.application.parsing.MainActivity">


    <item
        android:id="@+id/display_palmares"
        android:orderInCategory="100"
        android:title="@string/afficher_palmares"
        app:showAsAction="never" />

    <item
        android:id="@+id/display_convertisseur"
        android:orderInCategory="100"
        android:title="@string/afficher_convertisseur"
        app:showAsAction="never" />

    <item
        android:id="@+id/display_cours_devise"
        android:orderInCategory="100"
        android:title="@string/afficher_cours_devise"
        app:showAsAction="never" />





</menu>
