<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/code"
        android:textColor="@color/colorBlack"
        android:layout_marginRight="10dp"
        android:id="@+id/code"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/unite"
        android:textColor="@color/colorBlack"
        android:layout_marginRight="10dp"
        android:id="@+id/unite"
        android:layout_below="@+id/code"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/achat"
        android:layout_marginRight="10dp"
        android:id="@+id/achat"
        android:textColor="@color/colorBlack"
        android:layout_below="@+id/unite"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/vente"
        android:layout_marginRight="10dp"
        android:id="@+id/vente"
        android:textColor="@color/colorBlack"
        android:layout_below="@+id/achat"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/code1"
        android:layout_alignTop="@+id/code"
        android:layout_toRightOf="@+id/code"
        android:layout_toEndOf="@+id/code" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/unite1"
        android:layout_above="@+id/achat"
        android:layout_toRightOf="@+id/achat"
        android:layout_toEndOf="@+id/achat" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/achat1"
        android:layout_alignTop="@+id/achat"
        android:layout_alignLeft="@+id/unite1"
        android:layout_alignStart="@+id/unite1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/vente1"
        android:layout_below="@+id/achat1"
        android:layout_alignLeft="@+id/achat1"
        android:layout_alignStart="@+id/achat1" />

</RelativeLayout>